--- a/_config.yml
+++ b/_config.yml
@@ -39,5 +39,5 @@ author:
   email:             Napoleonoikon@gmail.com
 
 # Custom vars
-version:             2.0.0
+version:             ∞.∞.∞
 repo:                https://github.com/cbmjs/
